Relatórios HTML e PDF gerados