@@ -1,6 +1,11 @@
 package com.example.legal_system.service;
 
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+
 import org.springframework.stereotype.Component;
+
 import com.example.legal_system.domain.IAccessRepository;
 import com.example.legal_system.dto.AccessStatisticsDTO;
 
@@ -14,10 +19,22 @@ public class HtmlAccessReport extends ReportGeneratorTemplate {
     @Override
     protected byte[] formatOutput(AccessStatisticsDTO statistics) {
         StringBuilder html = new StringBuilder();
-        html.append("<html><body>");
+        html.append("<html><head><meta charset=\"UTF-8\"></head><body>");
         html.append("<h1>Relatório de Acessos</h1>");
         html.append("<p>Horário de Pico: ").append(statistics.peakHour()).append("</p>");
-        // ... iteração para montar tabelas HTML para acessos por usuário e páginas
+        
+        html.append("<h2>Páginas mais visitadas</h2><ul>");
+        for (String page : statistics.mostVisitedPages()) {
+            html.append("<li>").append(page).append("</li>");
+        }
+        html.append("</ul>");
+
+        html.append("<h2>Acessos por usuário</h2><ul>");
+        statistics.totalAccess().forEach((userId, total) -> {
+            html.append("<li>Usuário ID: ").append(userId).append(" - Total: ").append(total).append("</li>");
+        });
+        html.append("</ul>");
+
         html.append("</body></html>");
         
         return html.toString().getBytes();
@@ -25,10 +42,14 @@ public class HtmlAccessReport extends ReportGeneratorTemplate {
 
     @Override
     protected String save(byte[] formattedReport) {
-        // Lógica para salvar o arquivo em disco ou S3
-        String path = "/reports/html/relatorio_" + System.currentTimeMillis() + ".html";
-        System.out.println("Salvando arquivo HTML em: " + path);
-        // Files.write(Path.of(caminho), arquivoFinal);
-        return path;
+        String path = "reports/html/relatorio_" + System.currentTimeMillis() + ".html";
+        try {
+            Path filePath = Paths.get(path);
+            Files.createDirectories(filePath.getParent());
+            Files.write(filePath, formattedReport);
+            return filePath.toAbsolutePath().toString();
+        } catch (Exception e) {
+            throw new RuntimeException("Erro ao salvar arquivo HTML: " + e.getMessage(), e);
+        }
     }
 }
